--- a/readme
+++ b/readme
@@ -1,1 +1,12 @@
 Tipología y cilo de vida de los datos
+
+Prectica 2
+
+Trabajo presentado por: Leandro Pájaro Fuentes
+
+Descripción de los archivos del repositorio:
+
+Practica2.ipynb : Desarrollo de cada uno de los puntos indicados en el documento M2.851_20211_Practica2.pdf.
+Archivos: Carpeta con los archivos csv utilizados para el desarrollo de la practica.
+Practica2.pdf: Desarrollo de los puntos en formato PDF
+practica2.py: Archivo con código fuente utilizado para el desarrollo de la práctica
