--- a/readme
+++ b/readme
@@ -10,3 +10,5 @@ Practica2.ipynb : Desarrollo de cada uno de los puntos indicados en el documento
 Archivos: Carpeta con los archivos csv utilizados para el desarrollo de la practica.
 Practica2.pdf: Desarrollo de los puntos en formato PDF
 practica2.py: Archivo con código fuente utilizado para el desarrollo de la práctica
+
+En el siguiente enlace https://drive.google.com/file/d/1VbzdY_ngqMCfdET8oYLsiIq2i67MkT41/view?usp=sharing se puede acceder al video que acompaña la práctica
